Use lambdas for disabling and enabling 'Reselect Device' button

BUG: 462408
FIXED-IN: 22.12.1